Enhanced DefaultThirdEyeClient and refactored thirdeye-dashboard to use the client.
RB=640858
R=kgopalak,npawar
A=npawar